# This configuration should be migrated to  pyproject.toml, when we drop ReadTheDocs

[metadata]
name = quantify-scheduler
description=A Python package for writing quantum programs featuring a hybrid gate-pulse control model with explicit timing control.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = The Quantify consortium consisting of Qblox and Orange Quantum Systems
maintainer_email = maintainers@quantify-os.org
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Python 3.10 is not supported because of pinned zhinst dependency
    #Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    quantum
    quantify
project_urls =
    "Documentation" = "https://quantify-quantify-scheduler.readthedocs-hosted.com"
    "Source" = "https://gitlab.com/quantify-os/quantify-scheduler"
    "Issue tracker" = "https://gitlab.com/quantify-os/quantify-scheduler/-/issues"
    "Changelog" = "https://gitlab.com/quantify-os/quantify-scheduler/-/blob/main/CHANGELOG.md"
    "Slack" = "https://join.slack.com/t/quantify-hq/shared_invite/zt-1nd78r4e9-rbWdna53cW4DO_YbtMhVuA"
    "Authors" = "https://gitlab.com/quantify-os/quantify-scheduler/-/blob/main/AUTHORS.md"

[options]
packages = find:
# Python 3.10 is not supported because of pinned zhinst dependency
python_requires = >=3.8, <3.10
zip_safe = False
include_package_data = True
install_requires =
    columnar
    dataclasses-json
    fastjsonschema
    matplotlib
    networkx
    numpy
    orjson
    # FIXME: replace "pandas jinja2" with "pandas[output_formatting]"
    # when pandas>1.5.3 is released and used.
    pandas
    jinja2
    pathvalidate
    plotly
    pydantic
    pyqtgraph==0.12.4 # 0.13 causes test to fail. Fixed in core, remove with next quantify-core release
    qblox-instruments==0.8 # Prevent upgrade upon minor release while allowing for installing patch releases
    quantify_core>=0.6.5 # For deprecation hints shown to end-users by default
    qcodes>=0.32.0 # 0.32.0: introduces InstrumentModule
    scipy
    xxhash

    # zhinst versions pinned see #187
    zhinst==21.8.20515
    zhinst-qcodes==0.1.4
    zhinst-toolkit==0.1.5

    # We are using rich in our tutorials
    rich[jupyter]

[options.packages.find]
include =
    quantify_scheduler
    quantify_scheduler.*

[options.package_data]
* =
    *.json

[bdist_wheel]
universal = 1

[aliases]
test = pytest
